# Invest2IIS

./: .gitignore  README.md  cron_history.json  main.py  pyproject.toml
bot/: bot.py  cron.py  cron_history.json  main.py  status_history.json
invest/: AccountStatus.py
invest2iis/bot/: bot.py  cron.py
invest2iis/invest/: AccountStatus.py  Stock.py
